fix: cambio front. los nsfw con el nsfw apagado se blurrean

--- a/FRONTEND/src/components/Post.css
+++ b/FRONTEND/src/components/Post.css
@@ -13,3 +13,7 @@
 .post > *{
     overflow-wrap: anywhere;
 }
+
+.blurred{
+    filter: blur(4px); /* ajusta el valor de px según lo necesites */
+}
